--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rAuCy6rjnB9cJlwdPgYGLhBPa8acAnKZJQpCZbPeS+s=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=price_checker
+DB_USERNAME=root
+DB_PASSWORD=mysql123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
